--- a/src/App.css
+++ b/src/App.css
@@ -33,4 +33,68 @@
 .player {
   position: absolute;
   user-select: none;
+  pointer-events: none;
+}
+
+.prop {
+  position: absolute;
+  user-select: none;
+}
+
+
+@keyframes hover {
+  0% {
+    transform: translateY(0px);
+  }
+  25% {
+    transform: translateY(-5px);
+  }
+  75% {
+    transform: translateY(5px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+.hover {
+  animation: hover 2.5s linear infinite;
+}
+
+@keyframes shake {
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+.shake {
+  animation: shake 0.5s ease-in-out infinite;
+}
+
+@keyframes crash {
+  0% {
+    transform: translateX(0) rotateZ(0) scale(1);
+  }
+  50% {
+    transform: translateY(55px) rotateZ(20deg);
+  }
+  99% {
+    transform: translateY(125px) rotateZ(130deg) scale(1);
+  }
+  100% {
+    transform: scale(0);
+  }
+}
+.crash {
+  animation: crash 1.0s ease-in-out forwards;
 }
