cleaned up and added functions to make working david only game

--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,14 @@
 #root {
-  width: 1600px;
   height: 100vh;
   margin: 900px;
-  margin: 0 auto;
+  margin: 0;
   padding: 0;
   text-align: center;
   user-select: none;
 }
 
 .arena {
-  width: 100%;
+  width: 100vw;
   height: 100%;
   position: relative;
   user-select: none;
@@ -45,6 +44,13 @@
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   padding: 40px;
+}
+
+@media (max-width: 786px) {
+  .menu {
+    grid-template-columns: 1fr;
+    grid-template-rows: 3fr;
+  }
 }
 
 label {
